src/objects/sdfs__FormulaShare_Log__c.object
<CustomObject>
    <fields>
        <fullName>sdfs__Batch_Finish_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Finish Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sdfs__Batches_Failed__c</fullName>
        <label>Batches Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Batches_Processed__c</fullName>
        <label>Batches Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Context__c</fullName>
        <label>Legacy (not in use)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Exception_Cause__c</fullName>
        <label>Exception Cause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sdfs__Exception_Line_Number__c</fullName>
        <label>Exception Line Number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Exception_Message__c</fullName>
        <label>Exception Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sdfs__Exception_Stack_Trace__c</fullName>
        <label>Exception Stack Trace</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sdfs__Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Failed_Batches__c</fullName>
        <label>Failed Batch Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Method_Name__c</fullName>
        <label>Legacy (not in use)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Number_Of_Rules__c</fullName>
        <label>Number Of Rules</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Processing_Finished_Milliseconds__c</fullName>
        <label>Processing Finished Milliseconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Processing_Finished__c</fullName>
        <label>Processing Finished</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sdfs__Processing_Started_Milliseconds__c</fullName>
        <label>Processing Started Milliseconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Processing_Started__c</fullName>
        <label>Processing Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sdfs__Processing_Time_Seconds__c</fullName>
        <formula>IF(!ISBLANK( sdfs__Processing_Started_Milliseconds__c ) &amp;&amp; !ISBLANK( sdfs__Processing_Finished_Milliseconds__c ), 
( sdfs__Processing_Finished_Milliseconds__c - sdfs__Processing_Started_Milliseconds__c ) / 1000,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processing Time (Seconds)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Query__c</fullName>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sdfs__Records_Not_Shared_by_FormulaShare__c</fullName>
        <inlineHelpText>Number of records processed in this batch which were not shared by FormulaShare, either prior to the batch running or afterwards. These records will not contribute towards the limit of total number of records shared</inlineHelpText>
        <label>Records Not Shared by FormulaShare</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Records_w_All_Sharing_Removed__c</fullName>
        <inlineHelpText>Number of records processed in this batch which were previously shared by FormulaShare, but had this sharing revoked (or no longer managed) by FormulaShare. These records will no longer contribute towards the limit of total number of records shared</inlineHelpText>
        <label>Records w/ All Sharing Removed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Records_w_Sharing_Applied_for_1st_Time__c</fullName>
        <inlineHelpText>Number of records which were identified as having sharing applied by this batch which were not previously shared by FormulaShare Rules. These records will contribute towards the limit of total number of records shared</inlineHelpText>
        <label>Records w/ Sharing Applied for 1st Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Records_w_Sharing_Still_In_Place__c</fullName>
        <inlineHelpText>Number of records processed in this batch which were previously shared by FormulaShare and have had no updates made to this sharing. These records contribute towards the limit of total number of records shared</inlineHelpText>
        <label>Records w/ Sharing Still In Place</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Records_w_Sharing_Updated__c</fullName>
        <inlineHelpText>Number of records processed in this batch which were previously shared by FormulaShare and have had updates made to this sharing. These records contribute towards the limit of total number of records shared</inlineHelpText>
        <label>Records w/ Sharing Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Related_Log_Required_for_Test_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Log (Required for Test Class)</label>
        <referenceTo>sdfs__FormulaShare_Log__c</referenceTo>
        <relationshipName>FormulaShare_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sdfs__Status__c</fullName>
        <formula>IF(sdfs__Batches_Processed__c = 0 &amp;&amp; sdfs__Exception_Type__c != NULL, &apos;Skipped&apos;, 
    IF((sdfs__Failed_Batches__c = &apos;None&apos; || ISBLANK(sdfs__Failed_Batches__c)), &apos;Success&apos;,
        IF((sdfs__Batches_Failed__c &gt; 0 &amp;&amp; sdfs__Batches_Failed__c &lt; sdfs__Batches_Processed__c), &apos;Partial Success&apos;,&apos;Failed&apos;)
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Type_In_Scope__c</fullName>
        <label>Type In Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FormulaShare Batch Log</label>
    <listViews>
        <fullName>sdfs__All</fullName>
        <columns>NAME</columns>
        <columns>sdfs__Type_In_Scope__c</columns>
        <columns>sdfs__Query__c</columns>
        <columns>sdfs__Batches_Processed__c</columns>
        <columns>sdfs__Processing_Started__c</columns>
        <columns>sdfs__Processing_Finished__c</columns>
        <columns>sdfs__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FSL-{000000}</displayFormat>
        <label>FormulaShare Batch Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FormulaShare Batch Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>sdfs__FormulaShare_Log_Share__c</fullName>
        <label>FormulaShare Batch Log Share</label>
    </sharingReasons>
</CustomObject>